src/styles/components/algolia.scss
:root:not([data-theme]),
[data-theme="light"],
[data-theme="dark"] {
  --docsearch-primary-color: var(--du-color-primary) !important;
  --docsearch-text-color: var(--du-color-contrast-high) !important;
  --docsearch-muted-color: var(--du-color-contrast-medium) !important;
  --docsearch-searchbox-background: var(--du-color-contrast-lowest) !important;
  --docsearch-searchbox-focus-background: var(--du-color-background) !important;
  --docsearch-modal-background: var(--du-color-contrast-lowest) !important;
  --docsearch-footer-background: var(--du-color-contrast-lowest) !important;
}

.DocSearch-Input,
.DocSearch-Cancel,
.DocSearch-Hit-source,
.DocSearch-Hit-title,
.DocSearch-Footer {
  font-family: var(--du-font-family-heading);
}

.DocSearch-Button {
  margin: 0;
}

// Hide Ctrl+K keys
.DocSearch-Button-Placeholder {
  padding-right: 6px;
}

.DocSearch-Logo,
.DocSearch-Button-Keys {
  display: none;
}

